--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -49,8 +49,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
-    cursor: pointer;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -61,5 +60,4 @@
 ::-webkit-scrollbar-thumb {
     border-radius: 8px;
     background-color: #fd377e;
-    -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
 }
